Now that sde managed columns are skipped we need to make our test data match
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@30237 e5c1c795-43da-0310-a71f-fac65c449510